Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjIntegerRettext.quorum
class Main
    action Main
        integer one = 66
        Integer two
        two:SetValue(66)
        Yoda<integer, Integer, text> yoda
        text ret = yoda:useForce(one, two)
        output "passed"
     end
end
