Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriIntegerRetintegerFail.quorum
class Main
    action Main
        integer one = 66
        integer two = 66
        Yoda<integer, integer, integer> yoda
        boolean wrongRet = yoda(one, two)
     end
end
